Add existing file

--- a/alumni.html
+++ b/alumni.html
@@ -516,6 +516,95 @@
                         </div><!-- /.profile-card  .profile-card-meta_classic -->
                 </div>
                 </div>
+                <div class="title-card team-classification">
+                    Alumni
+                </div>
+                <div class="row" style="padding-top: 20px;">
+                <div class="col-sm-8 col-md-3 zoom">
+                        <div class="profile-card profile-card-meta_classic ">
+                            <figure class="article-container">
+                                <img class="img-responsive" id="Udarika" src="assets/img/profile/UDARIKA-EDIRIWEERA.jpg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
+                                <figcaption>
+                                    <h3 class="fig-title">Udarika Ediriweera</h3>
+                                    <div class="middle">
+                                            <button id="modalbtn" onclick="openAboutModal(event,'Udarika','AboutUdarika','titleUdarika','subtitleUdarika','UdarikaEmail')" style=" background: transparent; border: none !important;">
+                                              <div class="text">About</div>
+                                            </button>
+                                        </div>
+                                    <div class="fig-title-des"></div>
+                                    <!-- <div class="fig-meta">
+                                        <p class="fig-cal"><strong>Call:</strong> <span>+61(07)373 53921</span></p>
+                                        <p class="fig-mail"><strong>Email:</strong> <span>nam-trung.nguyenEmailgriffith.edu.au</span></p>
+                                    </div> -->
+                                </figcaption>
+                            </figure>
+                            <div class="profile-card-meta" >
+                                    <ul class="pfofile-social list-unstyled list-inline">
+                                        <li><a href="#"> <img src="assets/img/profile/social/gs.png"  style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/id.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/fb.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/tw.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                    </ul>
+                                </div>
+                        </div><!-- /.profile-card  .profile-card-meta_classic -->
+                </div> 
+                <div class="col-sm-8 col-md-3 zoom">
+                        <div class="profile-card profile-card-meta_classic ">
+                            <figure class="article-container">
+                                <img class="img-responsive" id="Raul" src="assets/img/profile/profile_pic.jpeg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
+                                <figcaption>
+                                    <h3 class="fig-title">Raul Ramirez</h3>
+                                    <div class="middle">
+                                            <button id="modalbtn" onclick="openAboutModal(event,'Raul','AboutRaul','titleRaul','subtitleRaul','RaulEmail')" style=" background: transparent; border: none !important;">
+                                              <div class="text">About</div>
+                                            </button>
+                                        </div>
+                                    <div class="fig-title-des"></div>
+                                    <!-- <div class="fig-meta">
+                                        <p class="fig-cal"><strong>Call:</strong> <span>+61(07)373 53921</span></p>
+                                        <p class="fig-mail"><strong>Email:</strong> <span>nam-trung.nguyenEmailgriffith.edu.au</span></p>
+                                    </div> -->
+                                </figcaption>
+                            </figure>
+                            <div class="profile-card-meta" >
+                                    <ul class="pfofile-social list-unstyled list-inline">
+                                        <li><a href="#"> <img src="assets/img/profile/social/gs.png"  style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/id.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/fb.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/tw.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                    </ul>
+                                </div>
+                        </div><!-- /.profile-card  .profile-card-meta_classic -->
+                </div>
+                <div class="col-sm-8 col-md-3 zoom">
+                        <div class="profile-card profile-card-meta_classic ">
+                            <figure class="article-container">
+                                <img class="img-responsive" id="Caleb" src="assets/img/profile/profile_pic.jpeg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
+                                <figcaption>
+                                    <h3 class="fig-title">Caleb Smith</h3>
+                                    <div class="middle">
+                                            <button id="modalbtn" onclick="openAboutModal(event,'Caleb','AboutCaleb','titleCaleb','subtitleCaleb','CalebEmail')" style=" background: transparent; border: none !important;">
+                                              <div class="text">About</div>
+                                            </button>
+                                        </div>
+                                    <div class="fig-title-des"></div>
+                                    <!-- <div class="fig-meta">
+                                        <p class="fig-cal"><strong>Call:</strong> <span>+61(07)373 53921</span></p>
+                                        <p class="fig-mail"><strong>Email:</strong> <span>nam-trung.nguyenEmailgriffith.edu.au</span></p>
+                                    </div> -->
+                                </figcaption>
+                            </figure>
+                            <div class="profile-card-meta" >
+                                    <ul class="pfofile-social list-unstyled list-inline">
+                                        <li><a href="#"> <img src="assets/img/profile/social/gs.png"  style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/id.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/fb.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                        <li><a href="#"> <img src="assets/img/profile/social/tw.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                    </ul>
+                                </div>
+                        </div><!-- /.profile-card  .profile-card-meta_classic -->
+                </div>
+                </div>
             </div>
         </div>
     </main>
