--- a/people.html
+++ b/people.html
@@ -382,7 +382,7 @@
                           <h4 class="modal-title" id="titleNikhil" style="display: none;">Nikhil Sai</h4>
                           <h4 class="modal-title" id="titleMatthew" style="display: none;">Matthew Lister</h4>
                           <h4 class="modal-title" id="titleShelby" style="display: none;">Shelby Mccowan</h4>
-                          <h4 class="modal-title" id="titleAxat" style="display: none;">Axat Kumar</h4>
+                          <h4 class="modal-title" id="titleAkshat" style="display: none;">Akshat Kumar</h4>
                           <h4 class="modal-title" id="titleUdarika" style="display: none;">Udarika Ediriweera</h4>
                           <h4 class="modal-title" id="titleRaul" style="display: none;">Raul Ramirez</h4>
                           <h4 class="modal-title" id="titleCaleb" style="display: none;">Caleb Smith</h4>
@@ -395,7 +395,7 @@
                           <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleNikhil">MS Student | CS</div>
                           <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleMatthew">HPC administrator | CS</div>
                           <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleShelby">HPC administrator</div>
-                          <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleAxat">MS Student | CS</div>
+                          <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleAkshat">MS Student | CS</div>
                           <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleUdarika"></div>
                           <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleRaul"></div>
                           <div class="fig-title-des modalsubtitle" style="display: none;" id="subtitleCaleb"></div>
@@ -464,7 +464,7 @@
                                             <p id="AboutShelby" class="teamcontent" style="display: none;">
                                                 
                                             </p>
-                                            <p id="AboutAxat" class="teamcontent" style="display: none;">
+                                            <p id="AboutAkshat" class="teamcontent" style="display: none;">
                                                 
                                             </p>
                                         </div>
@@ -479,7 +479,7 @@
                                <p id="NikhilEmail" class="teamemail" style="display: none; text-align: left;" >nikhil.sai.kurivella@aggiemail.usu.edu</p>
                                <p id="ListerEmail" class="teamemail" style="display: none; text-align: left;" >matthew.lister@aggiemail.usu.edu</p>
                                <p id="ShelbyEmail" class="teamemail" style="display: none; text-align: left;" >itsme@shelbymccowan.com</p>
-                               <p id="AxatEmail" class="teamemail" style="display: none; text-align: left;" >k.akshat@aggiemail.usu.edu</p>
+                               <p id="AkshatEmail" class="teamemail" style="display: none; text-align: left;" >k.akshat@aggiemail.usu.edu</p>
                                <p id="UdarikaEmail" class="teamemail" style="display: none; text-align: left;" ></p>
                                <p id="RaulEmail" class="teamemail" style="display: none; text-align: left;" ></p>
                                <p id="CalebEmail" class="teamemail" style="display: none; text-align: left;" ></p>
@@ -698,11 +698,11 @@
                                 <div class="col-sm-8 col-md-3 flip-card zoom">
                                     <div class="profile-card profile-card-meta_classic ">
                                         <figure class="article-container">
-                                            <img class="img-responsive" id="Axat" src="assets/img/profile/profile_pic.jpeg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
+                                            <img class="img-responsive" id="Akshat" src="assets/img/profile/profile_pic.jpeg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
                                             <figcaption>
-                                                <h3 class="fig-title">Axat Kumar</h3>
+                                                <h3 class="fig-title">Akshat Kumar</h3>
                                                 <div class="middle">
-                                                        <button id="modalbtn" onclick="openAboutModal(event,'Axat','AboutAxat','titleAxat','subtitleAxat','AxatEmail')" style=" background: transparent; border: none !important;">
+                                                        <button id="modalbtn" onclick="openAboutModal(event,'Akshat','AboutAkshat','titleAkshat','subtitleAkshat','AkshatEmail')" style=" background: transparent; border: none !important;">
                                                           <div class="text">About</div>
                                                         </button>
                                                     </div>
