--- a/index.html
+++ b/index.html
@@ -299,6 +299,10 @@
                                         title="RB-Pred">RB-Pred</a>
                                 </li>
                                 <li>
+                                    <a href="http://bioinfo.usu.edu/legumeSSRdb/" target="_blank"
+                                        title="deepHPI">legumeSSRdb</a>
+                                </li>
+                                <li>
                                     <a href="ranchSATdb.html" target="_blank"
                                         title="deepHPI">ranchSATdb</a>
                                 </li>
