--- a/news.html
+++ b/news.html
@@ -149,6 +149,10 @@
                                     <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
                                         title="RB-Pred">RB-Pred</a>
                                 </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/legumeSSRdb/" target="_blank"
+                                        title="deepHPI">legumeSSRdb</a>
+                                </li>
                                 </ul>
                         </li>
 
@@ -205,8 +209,8 @@
 <div class="wrapper">
     <nav class="tabs">
       <div class="selector"></div>
-      <a href="#tabcontent" class="active tablinks" onclick="openAllTools(event, ['Academic_News1','Academic_News2'])"><i class="fab fa-superpowers"></i>Academic News</a>
-      <a href="#tabcontent" class="tablinks" onclick="openAllTools(event, ['News1','News2'])"><i class="fas fa-hand-rock"></i>News</a>
+      <a href="#tabcontent" class="active tablinks" onclick="openAllTools(event, ['Academic_News1','Academic_News2'])"><i class="fab fa-superpowers"></i>Research News</a>
+      <a href="#tabcontent" class="tablinks" onclick="openAllTools(event, ['News1','News2'])"><i class="fas fa-hand-rock"></i>Other News</a>
 
     </nav>
 </div>
