--- a/events.html
+++ b/events.html
@@ -149,6 +149,10 @@
                                     <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
                                         title="RB-Pred">RB-Pred</a>
                                 </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/legumeSSRdb/" target="_blank"
+                                        title="deepHPI">legumeSSRdb</a>
+                                </li>
                             </ul>
                     </li>
 
@@ -442,7 +446,7 @@
                               </div> -->
                               </a>
                     </div>
-                    <div class="col-sm-3  show-text-predhpi zoom">
+                <div class="col-sm-3  show-text-predhpi zoom">
                             <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" class="sabbi-events-link">
                             <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
                                 <!-- <a href="events_single.html" class="sabbi-events-link"> -->
@@ -469,7 +473,35 @@
                                     </div>
                                   </div> -->
                                   </a>
-                        </div>
+                </div>
+                <div class="col-sm-3  show-text-predhpi zoom">
+                    <a href="http://bioinfo.usu.edu/legumeSSRdb" target="_blank" class="sabbi-events-link">
+                    <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
+                        <!-- <a href="events_single.html" class="sabbi-events-link"> -->
+                            <figure>
+                                <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/legumeSSRdb.png" alt="thompson">
+                                <figcaption>
+                                    <h2 class="sabbi-events-title font-md__x">legumeSSRdb</h2>
+                                    <div class="middle">
+                                            <div class="text">Details</div>
+                                    </div>
+                                </figcaption>
+                            </figure>
+                        <!-- </a> -->
+                        <!-- <div class="events-item-meta">
+                            <div class="events-loc"><i class="ion-location"></i><span class="text">5005 Heavenly Village Way #2b, Lake Tahoe</span></div>
+                            <div class="events-date"><i class="ion-calendar"></i><span class="text">22nd January 2017</span></div>
+                        </div> -->
+                    </article><!-- /.sabbi-events-item -->
+                    <!-- <div class="overlay">
+                            <div class="text"> <strong>A host pathogen interactions database for citrus greening disease,
+                                which provides a BLAST Service with several proteomes related to the disease.
+                                Also includes the old prototypes of PredHPI tools.
+                            </strong>
+                            </div>
+                          </div> -->
+                          </a>
+        </div>
                 </div>
 
             </div><!-- /.events_post-sagment -->
