--- a/future_member.html
+++ b/future_member.html
@@ -174,6 +174,10 @@
                                     <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
                                         title="RB-Pred">RB-Pred</a>
                                 </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/legumeSSRdb/" target="_blank"
+                                        title="deepHPI">legumeSSRdb</a>
+                                </li>
                                 </ul>
                         </li>
                         
