--- a/news.html
+++ b/news.html
@@ -221,14 +221,17 @@
     <a class="sabbi-events-link">
     <div class="column-66">
       <!-- <h1 class="xlarge-font"><b>Catchy Headline</b></h1> -->
-      <h3 class="" style="color:MediumSeaGreen;"><b>Host-pathogen interaction paper accepted in <i>Briefings in
-            Bioinformatics</b></h3>
-            <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Nov 20, 2019</span></div>
-      <p style="color: black;">You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h3 class="" style="color:MediumSeaGreen;"><b>Naveen Duhan PhD student from our lab attended International Plant Animal Genome Conference in San, Diego.</b></h3>
+      <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Jan 11, 2020 - Jan 15,2020</span></div>
+      <p style="color: black;">There he presented poster on citSatdb and also gave an oral presentation on Greeningdb.<br><b>citSatdb:</b> Genome Wide Simple Sequence Repeat (SSR) Marker Database of Citrus Species for Germplasm Characterization and Crop Improvement 
+        <br><b>Greeningdb:</b> Database of Protein Features and Protein-Protein Interactions of the Bacteria Causing HLB 
+        <br><b>Presented an oral talk on :</b>
+        <br><b>citSatdb:</b> Genome Wide Simple Sequence Repeat (SSR) Marker Database of Citrus Species for Germplasm 
+        Characterization and Crop Improvement  </p>
       <!-- <button class="button">Download Application</button> -->
     </div>
-    <div class="column-33">
-        <img src="assets/img/events/Cricket_2019/7d2e764e.JPG" width="335" height="471">
+    <div class="column-33 box">
+        <img src="assets/img/events/Sand_2020/IMG_20200112_085157.jpg" width="335" height="471">
     </div>
     </a>
   </div>
@@ -238,15 +241,14 @@
   <div class="row">
         <a class="sabbi-events-link">
     <div class="column-33">
-      <img src="assets/img/events/Cricket_2019/7d2e764e.JPG" alt="App" width="335" height="471">
+      <img src="assets/img/events/Sand_2020/deephpi.png" alt="Image" width="335" height="471">
     </div>
     <div class="column-66">
       <!-- <h1 class="xlarge-font"><b>Clarity</b></h1> -->
-      <h3 class="" style="color:red;"><b>Plant-mSubP subcellular localization tool accepted for
-            publication in <i>AoB Plants</i></b></h3>
-            <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Oct 08, 2019</span></div>
+      <h3 class="" style="color:red;"><b>deepHPI server is now online</b></h3>
+            <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Nov 1, 2019</span></div>
 
-            <p style="color: black;">You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p style="color: black;">To bolster and accelerate the research on infectious disease we have implemented deepHPI. The deepHPI web server is a platform that uses Convolutional Neural Networks models  (CNN) for the accurate prediction of host-pathogen protein-protein interactions. The server delivers four host-pathogen model types: plant-pathogen, human-bacteria, human-virus & animal-pathogen; this, in order to account for a wide range of analyses and cases of use. Furthermore, it also provides an enriched visualization of the resulting host-pathogen network. </p>
       <!-- <button class="button" style="background-color:red">Read More</button> -->
     </div>
     </a>
@@ -258,15 +260,18 @@
         <a class="sabbi-events-link">
     <div class="column-66">
       <!-- <h1 class="xlarge-font"><b>The App</b></h1> -->
-      <h3 class="" style="color:MediumSeaGreen;"><b>Cardiovascular disease: Commonality
-            with cancer</b></h3>
-            <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Oct 12, 2016</span></div>
+      <h3 class="" style="color:MediumSeaGreen;"><b>New Researcher has joined KAABiL.
+      </b></h3>
+            <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Feb 21, 2020</span></div>
 
-      <p style="color: black;"> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p style="color: black;">Akshat Kumar a Master's Student from Computer Science
+        Department has joined as a Graduate Research Assistant.His intial research is focused on RNA-seq pipelines particularly
+        on developing a new python library for processing high throughput NGS data.
+    </p>
       <!-- <button class="button">Download Application</button> -->
     </div>
-    <div class="column-33">
-        <img src="assets/img/events/Cricket_2019/7d2e764e.JPG" width="335" height="471" >
+    <div class="column-33 box">
+        <img src="assets/img/profile/rsz_akshat.jpg" alt="Image" width="335" height="471" >
     </div>
     </a>
   </div>
@@ -274,13 +279,15 @@
 <div class="container tabcontent" id="News2"  style="display: none; background-color:#f1f1f1">
     <div class="row">
             <a class="sabbi-events-link">
-      <div class="column-33">
-        <img src="assets/img/events/Cricket_2019/7d2e764e.JPG" alt="App" width="335" height="471">
+      <div class="column-33 box">
+        <img src="assets/img/profile/shelby.jpg" alt="App" width="335" height="471">
       </div>
       <div class="column-66">
         <!-- <h1 class="xlarge-font"><b>Clarity</b></h1> -->
-        <h1 class="large-font" style="color:red;"><b>News heading</b></h1>
-        <p style="color: black;"> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3 class="" style="color:red;"><b>New Researcher has joined KAABiL.</b></h3>
+        <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Feb 21, 2020</span></div>
+        <p style="color: black;"> Shelby McCowan an Undergraduate Student from has joined as a High Performance Computing Administrator.
+            </p>
           <!-- <button class="button" style="background-color:red">Read More</button> -->
       </div>
       </a>
