--- a/alumni.html
+++ b/alumni.html
@@ -331,7 +331,7 @@
                     </div>
                   </div>
                 <div class="title-card team-classification">
-                    Alumni
+                    Alumni (Utah State University)
                 </div>
                 <div class="row" style="padding-top: 20px;">
                 <div class="col-sm-8 col-md-3 zoom">
@@ -420,7 +420,7 @@
                 </div>
                 </div>
                 <div class="title-card team-classification">
-                    Alumni
+                    Alumni (Oklahoma State University)
                 </div>
                 <div class="row" style="padding-top: 20px;">
                 <div class="col-sm-8 col-md-3 zoom">
