--- a/people.html
+++ b/people.html
@@ -603,7 +603,7 @@
                                 <div class="col-sm-8 col-md-3 flip-card zoom">
                                     <div class="profile-card profile-card-meta_classic ">
                                         <figure class="article-container">
-                                            <img class="img-responsive" id="Akshat" src="assets/img/profile/profile_pic.jpeg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
+                                            <img class="img-responsive" id="Akshat" src="assets/img/profile/rsz_akshat.jpg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
                                             <figcaption>
                                                 <h3 class="fig-title">Akshat Kumar</h3>
                                                 <div class="middle">
