--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
                                 <ul class=" dropdown-menu" role="menu"> -->
                                     <li class="">
-                                        <a href="news.html" title="News">News</a>
+                                        <a href="sep_news.html" title="News">News</a>
                                     </li>
                                     <!-- <li>
                                         <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
@@ -235,6 +235,7 @@
                             </li>
                             <li class="seq-step1" id="step2"
                                 style="background:url(assets/img/USU_ag.jpg); background-position-y: -400px; background-color: black;  background-size:cover">
+                                
                                 <div class="bg-blend"></div>
                                 <div class="seq-content">
 
@@ -268,9 +269,8 @@
                                     <a href="#" class="btn-link btn-more">READ MORE</a>
                                 </div>
                             </li>
-                            <li class="seq-step1" id="step3"
-                                style="background:url(assets/img/g95.png);  background-size:cover; background-color: black">
-
+                            <li class="seq-step1" id="step3" style="background-color: black;">
+                                <img class="fix-picture" src="assets/img/g95.png"/>
                                 <div class="bg-blend"></div>
                                 <div class="seq-content">
 
