--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -50,8 +50,10 @@
                 </div>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
-                <div class="nav-btn-wrap"><a href="future_member.html#enroll" class="btn btn-primary pull-right" >Join Research</a></div>
-                <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
+                <div class="nav-btn-wrap btn-group  pull-right">
+                    <button class="btn btn-primary" target =  "_blank" onclick="window.location.href='http://bioinfo.usu.edu/covidTracker/'">Covid 19 Tracker</button>
+                    <button class="btn btn-primary"  onclick="window.location.href='future_member.html#enroll'">Join Research</button>
+                  </div>                <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
                     <li>
                         <a href="index.html" title="Home">Home</a>
                     </li>
