--- a/news.html
+++ b/news.html
@@ -15,6 +15,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Open+Sans:300,400,400i,600,700" rel="stylesheet">
     <link href="assets/fonts/ionicons/css/ionicons.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Tools -->
     <link href="assets/tools/sequence/css/sequence-theme.basic.css" rel="stylesheet" media="all">
@@ -51,8 +52,10 @@
                         </div>
                     </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
-                <div class="nav-btn-wrap"><a href="#enroll" class="btn btn-primary pull-right">Join Research</a></div>
-                <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
+                <div class="nav-btn-wrap btn-group  pull-right">
+                    <button class="btn btn-primary" target =  "_blank" onclick="window.location.href='http://bioinfo.usu.edu/covidTracker/'">Covid 19 Tracker</button>
+                    <button class="btn btn-primary"  onclick="window.location.href='#enroll'">Join Research</button>
+                  </div>                <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
                         <li>
                             <a href="index.html" title="Home">Home</a>
                         </li>
@@ -210,7 +213,7 @@
     <nav class="tabs">
       <div class="selector"></div>
       <a href="#tabcontent" class="active tablinks" onclick="openAllTools(event, ['Academic_News1','Academic_News2'])"><i class="fab fa-superpowers"></i>Research News</a>
-      <a href="#tabcontent" class="tablinks" onclick="openAllTools(event, ['News1','News2'])"><i class="fas fa-hand-rock"></i>Other News</a>
+      <a href="#tabcontent" class="tablinks" onclick="openAllTools(event, ['News1','News2','News3'])"><i class="fas fa-hand-rock"></i>Other News</a>
 
     </nav>
 </div>
@@ -221,7 +224,7 @@
     <a class="sabbi-events-link">
     <div class="column-66">
       <!-- <h1 class="xlarge-font"><b>Catchy Headline</b></h1> -->
-      <h3 class="" style="color:MediumSeaGreen;"><b>Naveen Duhan PhD student from our lab attended International Plant Animal Genome Conference in San, Diego.</b></h3>
+      <p class="" style="color:#0f2439;"><b>Naveen Duhan PhD student from our lab attended International Plant Animal Genome Conference in San, Diego.</b></p>
       <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Jan 11, 2020 - Jan 15,2020</span></div>
       <p style="color: black;">There he presented poster on citSatdb and also gave an oral presentation on Greeningdb.<br><b>citSatdb:</b> Genome Wide Simple Sequence Repeat (SSR) Marker Database of Citrus Species for Germplasm Characterization and Crop Improvement 
         <br><b>Greeningdb:</b> Database of Protein Features and Protein-Protein Interactions of the Bacteria Causing HLB 
@@ -245,7 +248,7 @@
     </div>
     <div class="column-66">
       <!-- <h1 class="xlarge-font"><b>Clarity</b></h1> -->
-      <h3 class="" style="color:red;"><b>deepHPI server is now online</b></h3>
+      <p class="" style="color:#0f2439;"><b>deepHPI server is now online</b></p>
             <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Nov 1, 2019</span></div>
 
             <p style="color: black;">To bolster and accelerate the research on infectious disease we have implemented deepHPI. The deepHPI web server is a platform that uses Convolutional Neural Networks models  (CNN) for the accurate prediction of host-pathogen protein-protein interactions. The server delivers four host-pathogen model types: plant-pathogen, human-bacteria, human-virus & animal-pathogen; this, in order to account for a wide range of analyses and cases of use. Furthermore, it also provides an enriched visualization of the resulting host-pathogen network. </p>
@@ -255,13 +258,50 @@
   </div>
 </div>
 
+<div class="container tabcontent" id="News3" style="display: none;">
+    <div class="row">
+          <a class="sabbi-events-link">
+      <div class="column-66">
+        <!-- <h1 class="xlarge-font"><b>The App</b></h1> -->
+        <p class="" style="color:#0f2439;"><b>Covid Tracker.
+        </b></p>
+              <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >April 10, 2020</span></div>
+  
+        <p style="color: black;">A new website is now online for tracking the covid 19 updates. Developed by Navin Duhan Phd Student
+            at Bioinformatics Lab.
+      </p> <a  target="_blank" href="http://bioinfo.usu.edu/covidTracker/">Covid 19 Tracker <i style="color: #D30015; font-size: 12px;" class="fa fa-external-link"></i></a>
+        <!-- <button class="button">Download Application</button> -->
+      </div>
+      <div class="column-33 box">
+          <img src="assets/img/covid19.PNG" alt="Image" width="335" height="471" style="transform: scale(1.1)  ;" >
+      </div>
+      </a>
+    </div>
+  </div>
+  <div class="container tabcontent" id="News2"  style="display: none; background-color:#f1f1f1">
+    <div class="row">
+            <a class="sabbi-events-link">
+      <div class="column-33 box">
+        <img src="assets/img/profile/shelby.jpg" style="transform: scale(1.1)  ;" alt="App" width="335" height="471">
+      </div>
+      <div class="column-66">
+        <!-- <h1 class="xlarge-font"><b>Clarity</b></h1> -->
+        <p class="" style="color:#0f2439;"><b>New Researcher has joined KAABiL.</b></p>
+        <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Feb 21, 2020</span></div>
+        <p style="color: black;"> Shelby McCowan an Undergraduate Student from has joined as a High Performance Computing Administrator.
+            </p>
+          <!-- <button class="button" style="background-color:red">Read More</button> -->
+      </div>
+      </a>
+    </div>
+  </div>
 <div class="container tabcontent" id="News1" style="display: none;">
   <div class="row">
         <a class="sabbi-events-link">
     <div class="column-66">
       <!-- <h1 class="xlarge-font"><b>The App</b></h1> -->
-      <h3 class="" style="color:MediumSeaGreen;"><b>New Researcher has joined KAABiL.
-      </b></h3>
+      <p class="" style="color:#0f2439;"><b>New Researcher has joined KAABiL.
+      </b></p>
             <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Feb 21, 2020</span></div>
 
       <p style="color: black;">Akshat Kumar a Master's Student from Computer Science
@@ -276,23 +316,7 @@
     </a>
   </div>
 </div>
-<div class="container tabcontent" id="News2"  style="display: none; background-color:#f1f1f1">
-    <div class="row">
-            <a class="sabbi-events-link">
-      <div class="column-33 box">
-        <img src="assets/img/profile/shelby.jpg" style="transform: scale(1.1)  ;" alt="App" width="335" height="471">
-      </div>
-      <div class="column-66">
-        <!-- <h1 class="xlarge-font"><b>Clarity</b></h1> -->
-        <h3 class="" style="color:red;"><b>New Researcher has joined KAABiL.</b></h3>
-        <div class="events-date" style="color: gray;"><i class="ion-calendar"></i> <span class="text" >Feb 21, 2020</span></div>
-        <p style="color: black;"> Shelby McCowan an Undergraduate Student from has joined as a High Performance Computing Administrator.
-            </p>
-          <!-- <button class="button" style="background-color:red">Read More</button> -->
-      </div>
-      </a>
-    </div>
-  </div>
+
         </div>
     </section>
     <!-- /.stage-future_member -->
