--- a/ourteam.html
+++ b/ourteam.html
@@ -312,11 +312,12 @@
                                      </div>
                                      <div >
                                          <p id="AboutLarson" class="teamcontent" style="display: none;" >
-                                             Rousselene Larson,is a researcher at Utah State University with the expertise in
-                                             Bioinfomatics.She works collaboratively with inter-disciplinary scholars to
+                                             Rousselene Larson is a researcher at Utah State University with expertise in
+                                             Bioinformatics. She works collaboratively with interdisciplinary scholars to
                                              comprehend research objectives and provide informatics solutions to  projects
-                                             involving NGS data analysis.She is highly proficient in Unix/Linux shell
-                                             scripting, R,python,Perl & range of bioinformatics tools/packages.Her Sequence analysis comprises of Genome Assembly, RNA-seq,
+                                             involving NGS data analysis. She is proficient in Unix/Linux shell
+                                             scripting, R, Python, Perl, and a range of bioinformatics tools/packages.
+                                             Her sequence analysis comprises of genome assembly, RNA-seq,
                                              Bisulfite_seq, and SNP analysis.
                                          </p>
                                          <p id="AboutZhang" class="teamcontent" style="display: none;">
@@ -328,12 +329,12 @@
                                               in intelligent transportation systems and smart agricultural systems.
                                          </p>
                                          <p id="AboutCristian" class="teamcontent" style="display: none;">
-                                                 Cristian is a plant science MS student from Colombia.
+                                                 Cristian is a Plant Science MS student from Colombia.
                                                  After completing his BS (Computer Science: Universidad del Valle; Cali, Colombia),
                                                  he worked as a Research Assistant at CIAT(CGIAR) and the Colombian Sugarcane Research
                                                  Center before joining the Kaundal Bioinformatics Laboratory. After his graduation,
-                                                 he plans to go back to Colombia to join his family, then pursue a Ph.D. degree to become
-                                                 a Professor.
+                                                 he plans to go back to Colombia to join his family, then pursue a Ph.D. to become
+                                                 a professor.
                                          </p>
                                          <p id="AboutDuhan" class="teamcontent" style="display: none;">
 
@@ -342,18 +343,17 @@
 
                                          </p>
                                          <p id="AboutNikhil" class="teamcontent" style="display: none;">
-                                                 Nikhil is a computer science graduate student at USU. His bachelor's degree is in
-                                                 Information technology from Osmania University, India. His research focus is in Bioinformatics.
-                                                 While, he is currently working on Deep learning, developing prediction models for subcellular localization
-                                                 in Human and Arabidopsis genome and creating SSR prediction database. He is also actively studying Algorithms
-                                                 and event driven programming.
-
+                                           Nikhil is a Computer Science graduate student at USU. His bachelor's degree is in
+                                           Information Technology from Osmania University, India. His research focus is in Bioinformatics.
+                                           He is currently working on deep learning, developing prediction models for subcellular localization
+                                           in human and arabidopsis genome and creating an SSR prediction database. He is also actively studying algorithms
+                                           and event-driven programming.
                                          </p>
                                          <p id="AboutMatthew" class="teamcontent" style="display: none;">
-                                                 Matthew is the systems administrator to the high performance cluster for the bioinformatics group.
-                                                 A passionate Linux enthusiast, his work includes bioinformatics programming and teaching Linux to new users.
-                                                 Matthew is starting an MS in computer science this spring and hopes to add an MS statistics to his
-                                                 plan of study.
+                                           Matthew is the systems administrator of the high performance cluster for the bioinformatics group.
+                                           A passionate Linux enthusiast, his work includes bioinformatics programming and teaching Linux to new users.
+                                           Matthew is starting an MS in Computer Science this spring and hopes to add a Master's in statistics to his
+                                           plan of study.
                                          </p>
                                          <p id="AboutUdarika" class="teamcontent" style="display: none;">
 
@@ -408,7 +408,7 @@
                                        <div class="text">About</div>
                                      </button>
                                  </div>
-                                 <div class="fig-title-des"><i>Bioinformatic Scientist</i></div>
+                                 <div class="fig-title-des"><i>Bioinformatics Scientist</i></div>
                                  <!-- <div class="fig-meta">
                                      <p class="fig-cal"><strong>Call:</strong> <span>+61(07)373 53921</span></p>
                                      <p class="fig-mail"><strong>Email:</strong> <span>nam-trung.nguyenEmailgriffith.edu.au</span></p>
@@ -582,7 +582,7 @@
                                                            <div class="text">About</div>
                                                          </button>
                                                      </div>
-                                                 <div class="fig-title-des">HPC administrator | CS</div>
+                                                 <div class="fig-title-des">HPC Administrator | CS</div>
                                                  <!-- <div class="fig-meta">
                                                      <p class="fig-cal"><strong>Call:</strong> <span>+61(07)373 53921</span></p>
                                                      <p class="fig-mail"><strong>Email:</strong> <span>nam-trung.nguyenEmailgriffith.edu.au</span></p>
@@ -635,7 +635,7 @@
                      <div class="col-sm-8 col-md-3 flip-card zoom">
                              <div class="profile-card profile-card-meta_classic ">
                                  <figure class="article-container">
-                                     <img class="img-responsive" id="Shelby" src="assets/img/profile/profile_pic.jpeg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
+                                     <img class="img-responsive" id="Shelby" src="assets/img/profile/shelby.jpg" style="width: 210px; height: 210px" alt="sabbi-profile-pic">
                                      <figcaption>
                                          <h3 class="fig-title">Shelby McCowan</h3>
                                          <div class="middle">
@@ -643,19 +643,12 @@
                                                    <div class="text">About</div>
                                                  </button>
                                              </div>
-                                         <div class="fig-title-des">HPC administrator | BSc Biochemistry</div>
-                                         <!-- <div class="fig-meta">
-                                             <p class="fig-cal"><strong>Call:</strong> <span>+61(07)373 53921</span></p>
-                                             <p class="fig-mail"><strong>Email:</strong> <span>nam-trung.nguyenEmailgriffith.edu.au</span></p>
-                                         </div> -->
+                                         <div class="fig-title-des">HPC Administrator | BSc Biochemistry</div>
                                      </figcaption>
                                  </figure>
                                  <div class="profile-card-meta" >
                                      <ul class="pfofile-social list-unstyled list-inline">
-                                         <li><a href="#"> <img src="assets/img/profile/social/gs.png"  style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
-                                         <li><a href="#"> <img src="assets/img/profile/social/id.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
-                                         <li><a href="#"> <img src="assets/img/profile/social/fb.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
-                                         <li><a href="#"> <img src="assets/img/profile/social/tw.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
+                                         <li><a href="https://twitter.com/ShelbyMccowan"> <img src="assets/img/profile/social/tw.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
                                      </ul>
                                  </div>
                              </div><!-- /.profile-card  .profile-card-meta_classic -->
